# norn

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/src/norn_cli/: __init__.py  main.py
config/: agent.yml  database.yml  forecast.yml  mcp.yml  scheduler.yml
deploy/: .env.example  README.md  agent.Dockerfile  agent.env.example  bootstrap-lightdash.sh  docker-compose.services.yml  docker-compose.yml  lightdash-init.Dockerfile  norn.Dockerfile  timesfm-requirements.txt  timesfm.Dockerfile
deploy/dbt/: dbt_project.yml  profiles.yml
deploy/dbt/models/: actual_vs_forecast.sql  mart_metric.sql  sources.yml
docs/erd/: architecture.mermaid  erd.mermaid  monorepo-and-data-model.md
docs/guide/: README.md  configuration.md  deployment.md  forecast-methodology.md  getting-started.md  jobs.md  mcp.md  overview.md
docs/integration/: lightdash.md
docs/prd/: metric-intelligence-strategy.md  mvp-prd-backlog.md
docs/specs/: 2026-06-04-norn-services-containerization-design.md
forecasts/: example.yml  example_deps.yml
instances/example/: README.md
tests/: conftest.py  test_agent_worker.py  test_analyze_deps.py  test_baseline.py  test_calibration.py  test_cli.py  test_cli_calibrate.py  test_cli_deps.py  test_cli_mcp.py  test_clickhouse.py  test_config.py  test_contract.py  test_covariates.py  test_dep_agent.py  test_dep_contract.py  test_dep_imports.py  test_dep_methods.py  test_dep_schema.py  test_docs_erd.py  test_forecaster.py  test_imports.py  test_mcp_dependencies.py  test_mcp_server.py  test_mcp_tools.py  test_runner.py  test_scheduler_actions.py  test_scheduler_api.py  test_scheduler_manifest.py  test_scheduler_retry.py  test_scheduler_service.py  test_schema.py  test_timesfm_model_import.py  test_timesfm_worker.py
(+25 files in other folders)
