[project]
name = "norn"
version = "0.0.0"
requires-python = ">=3.12"
description = "norn — vendor-neutral forecasting layer (platform)"

[tool.uv.workspace]
members = ["packages/*", "cli"]

[tool.uv.sources]
norn-core = { workspace = true }
norn-integration = { workspace = true }
norn-forecast = { workspace = true }
norn-agent = { workspace = true }
norn-scheduler = { workspace = true }
norn-cli = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5",
    "anyio>=4",  # used directly by tests/test_cli_mcp.py (not just via mcp)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=packages --cov=cli --cov-report=term-missing"

[tool.coverage.run]
omit = [
    # torch-only worker internals: exercised in the timesfm container, not in unit tests
    "*/norn_forecast/timesfm_model.py",
]
